force-app/main/default/objects/AI_Integration_Config__mdt/AI_Integration_Config__mdt.object-meta.xml
<CustomObject>
    <label>AI Integration Config</label>
    <pluralLabel>AI Integration Configs</pluralLabel>
</CustomObject>