force-app/main/default/objects/AI_Integration_Config__mdt/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <label>Endpoint Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>